kustomize/components/xata-cnpg-1.28.0/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-operator
  namespace: xata-clusters
spec:
  podSelector:
    matchLabels:
      cnpg.io/podRole: instance
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 8000
        - port: 5432
---
# Allow otel collectors to query CNPG metrics
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-otel-to-cnpg
  namespace: xata-clusters
spec:
  podSelector:
    matchLabels:
      cnpg.io/podRole: instance
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: otel
          podSelector:
            matchLabels:
              app.kubernetes.io/name: opentelemetry-collector
      ports:
        - port: 9187
          protocol: TCP
---
# Allow otel collectors to query CNPG pooler metrics
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-otel-to-cnpg-pooler
  namespace: xata-clusters
spec:
  podSelector:
    matchLabels:
      cnpg.io/podRole: pooler
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: otel
          podSelector:
            matchLabels:
              app.kubernetes.io/name: opentelemetry-collector
      ports:
        - port: 9127
          protocol: TCP
